@@ -15,6 +15,15 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Win32 compilation fixes.
+ include/win32.h: #define sleep.
+ plugins/cfanim/include/cfanim_proto.h: missing CF_PLUGIN.
+Nicolas Weeger 2008-01-03
+
+Fix variable being used while not initialized.
+ server/player.c
+Nicolas Weeger 2007-12-28
+
 Merge documentation change from wiki.
  doc/Developers/objects
 Kevin Bulgrien 2007-12-28
